--- a/index.html
+++ b/index.html
@@ -154,9 +154,14 @@
   </form>
 
   <div class="buttons">
+    <!-- PDF Orientation Selector -->
+    <label for="pdfOrientation">PDF Orientation:</label>
+    <select id="pdfOrientation">
+      <option value="l">Landscape</option>
+      <option value="p">Portrait</option>
+    </select>
     <button id="generatePdf">Generate PDF</button>
     <button id="exportCsv">Export CSV</button>
-    <!-- Clear All Entries button added -->
     <button id="clearAll">Clear All Entries</button>
   </div>
 
@@ -249,7 +254,7 @@
         });
       }
       
-      // New helper function to clear all entries in the object store
+      // Helper function to clear all entries in the object store
       function clearAllEntriesFromDB() {
         return new Promise((resolve, reject) => {
           const transaction = db.transaction([STORE_NAME], 'readwrite');
@@ -299,6 +304,7 @@
       const generatePdfButton = document.getElementById('generatePdf');
       const exportCsvButton   = document.getElementById('exportCsv');
       const clearAllButton    = document.getElementById('clearAll');
+      const pdfOrientationSelect = document.getElementById('pdfOrientation');
 
       ////////////////////////////////////////////////////////////////////////////
       // 3) Debounce Helper (1 second delay)
@@ -477,11 +483,12 @@
       searchCodeInput.addEventListener('input', handleSearch);
 
       ////////////////////////////////////////////////////////////////////////////
-      // 8) Generate PDF using jsPDF in landscape ensuring complete rows on pages
+      // 8) Generate PDF using jsPDF in selected orientation ensuring complete rows on pages
       ////////////////////////////////////////////////////////////////////////////
       generatePdfButton.addEventListener('click', () => {
         const { jsPDF } = window.jspdf;
-        const doc = new jsPDF('l', 'pt', 'letter');
+        const orientation = pdfOrientationSelect.value; // 'l' for landscape, 'p' for portrait
+        const doc = new jsPDF(orientation, 'pt', 'letter');
         const pageWidth = doc.internal.pageSize.getWidth();
         const pageHeight = doc.internal.pageSize.getHeight();
         const margin = 40;
